compiler/testData/diagnostics/tests/smartCasts/typeInComparison.fir.kt
fun foo(): Int {
    val x: Any? = null
    val y = 2
    if (x == y) {
        return x <!UNRESOLVED_REFERENCE!>+<!> y
    }
    return y
}